Vista medida individual

--- a/web/index.html
+++ b/web/index.html
@@ -11120,8 +11120,10 @@
   var medidas =  parsear_url();
   for (i=0; i<medidas.length; i++) {
     $('.medidas-programa').hide();
-    $('#medida-'+medidas[i]).fadeIn();
-    $('#medida-'+medidas[i]+' .description').show();
+    $('#medida-'+medidas[i]).fadeIn(function() {
+      //$('#medida-'+medidas[i]+' h4').click();
+      $('#medida-'+medidas[i]+' .descripcion-medida').show();
+    });
   }
 })(jQuery);
 
