--- a/web/index.min.html
+++ b/web/index.min.html
@@ -65,7 +65,9 @@
   var medidas =  parsear_url();
   for (i=0; i<medidas.length; i++) {
     $('.medidas-programa').hide();
-    $('#medida-'+medidas[i]).fadeIn();
-    $('#medida-'+medidas[i]+' .description').show();
+    $('#medida-'+medidas[i]).fadeIn(function() {
+      //$('#medida-'+medidas[i]+' h4').click();
+      $('#medida-'+medidas[i]+' .descripcion-medida').show();
+    });
   }
 })(jQuery);</script>
