--- a/web/index.html
+++ b/web/index.html
@@ -11123,7 +11123,7 @@
     $('.medidas-programa').hide();
     $('#medida-'+medidas[i]).fadeIn(function() {
       //$('#medida-'+medidas[i]+' h4').click();
-      $(this).find('.descripcion-medida').slideDown();
+      $(this).find('.descripcion-medida').delay(1000).slideDown();
     });
   }
 })(jQuery);
