--- a/web/index.html
+++ b/web/index.html
@@ -2015,7 +2015,7 @@
 		<div id="medida-68" class="medidas-programa" data-eje="Democracia Económica">
 		    <div class="numero-medida">68</div>
 		    <div class="titulo-medida">
-		        <h4>Incorporación de la voz de los autónomos en el diálogo social</h4>
+		        <h4>Incorporación de la voz de la economía social y de los autónomos en el diálogo social</h4>
 		        <div class="categoria-medida">
             
 		            <a href="#68" data-rel="administraciones-publicas"><span>Administraciones públicas</span></a>
@@ -2032,7 +2032,7 @@
             
 		        </div>
 		        <div class="descripcion-medida">
-              <p>Incluiremos a los autónomos en las mesas de diálogo social, a través de las organizaciones que los representan, para que sus opiniones se tengan en cuenta en las decisiones de gran calado.</p>
+              <p>Incluiremos a los actores de la economía social y a los autónomos en las mesas de diálogo social, a través de las organizaciones que los representan, para que sus opiniones se tengan en cuenta en las decisiones de gran calado.</p>
               <div class="social">
                 <a href=""><i class="fa fa-facebook-official"></i></a>
                 <a href=""><i class="fa fa-twitter"></i></a>
