--- a/web/programa_gl.html
+++ b/web/programa_gl.html
@@ -13052,7 +13052,7 @@ Obxectivo residuo CERO</h4>
 ;(function($) {
 
   //var url_base = 'http://unpaiscontigo.es/programa/';
-  var url_base = document.location.href;
+  var url_base = document.location.href.split('?')[0];
 
 	$('.medidas-programa .titulo-medida h4').on('click', function(e) {
 		var descripcion = $(this).parent().find('.descripcion-medida');
