--- a/web/programa_eu.html
+++ b/web/programa_eu.html
@@ -2,12 +2,12 @@
 <div class="programa-elecciones-generales">
 
 	<div class="idiomas">
-		<a href="http://unpaiscontigo.es/programa/">Castellano</a>
-		<a href="http://unpaiscontigo.es/programa-ca/" >Català/Valencià</a>
-		<a href="http://unpaiscontigo.es/programa-eu/"  class="selected">Euskera</a>
-		<a href="http://unpaiscontigo.es/programa-gl/" >Galego</a>
-		<a href="http://unpaiscontigo.es/programa-ast/" >Asturiano</a>
-		<a href="http://unpaiscontigo.es/programa-en/" >English</a>
+		<a href="http://unpaiscontigo.es/programa-es/">Castellano</a>
+		<a href="http://unpaiscontigo.es/programa-ca/">Català/Valencià</a>
+		<a href="http://unpaiscontigo.es/programa-eu/" class="selected">Euskera</a>
+		<a href="http://unpaiscontigo.es/programa-gl/">Galego</a>
+		<a href="http://unpaiscontigo.es/programa-ast/">Asturiano</a>
+		<a href="http://unpaiscontigo.es/programa-en/">English</a>
 	</div>
 
     <div>
