--- a/web/programa_eu.html
+++ b/web/programa_eu.html
@@ -9461,14 +9461,10 @@
 		        <div class="descripcion-medida">
               <p>Migrazio Plan Estrategiko bat ezartzea, software librea eta datu irekiak erabiltzen dituzten tresnen erabilera hedatzeko; horren helburua da posible den kasu guztietan jabetza duten tresnak ordezkatzea eta Administrazioan datuak kudeatzeko erabiltzen den teknologiaren benetako kontrola eskuratzea. Horretarako:</p>
 <ul>
-<li><p>Administrazio publikoetan software libreko tresnak ezarriko ditugu eta programa bat abiatuko dugu langile publikoei horiek erabiltzen irakasteko.</p>
-</li>
-<li><p>Kudeaketa publikoan, formatu irekien erabilera orokortuko dugu.</p>
-</li>
-<li><p>Sektorearen ehundura soziala eta produktiboa indartuko dugu, aberatsa baita berrikuntzan eta enplegua sortzeko balio baitu.</p>
-</li>
-<li><p>Informatikaren arloko segurtasunaren eta pribatutasunaren aldeko apustua egingo dugu, XXI. mendeko eskubide integrala baita, eta eskubide hori urratzen zaien pertsonei babes legala eskainiko diegu.</p>
-</li>
+<li>Administrazio publikoetan software libreko tresnak ezarriko ditugu eta programa bat abiatuko dugu langile publikoei horiek erabiltzen irakasteko.</li>
+<li>Kudeaketa publikoan, formatu irekien erabilera orokortuko dugu.</li>
+<li>Sektorearen ehundura soziala eta produktiboa indartuko dugu, aberatsa baita berrikuntzan eta enplegua sortzeko balio baitu.</li>
+<li>Informatikaren arloko segurtasunaren eta pribatutasunaren aldeko apustua egingo dugu, XXI. mendeko eskubide integrala baita, eta eskubide hori urratzen zaien pertsonei babes legala eskainiko diegu.</li>
 </ul>
 
               <div class="social">
