Mejorado buscador de programa

--- a/web/programa_ca.html
+++ b/web/programa_ca.html
@@ -13092,7 +13092,14 @@ L’autorització per poder desenvolupar la solució acordada.</li>
 	 
 	})();
 
-	$('#medidas-visibles').text($('.medidas-programa:visible').length);
+	function medidas_visibles() {
+		setTimeout(function() {
+			$('#medidas-visibles').text($('.medidas-programa:visible').length);
+		}, 500);
+	}
+
+	//$('#medidas-visibles').text($('.medidas-programa:visible').length);
+	medidas_visibles();
 
 	$('#busca').on('keyup', function(e) {
 		var objetivo = normaliza($(this).val());
@@ -13108,7 +13115,8 @@ L’autorització per poder desenvolupar la solució acordada.</li>
 				}
 			});
 		}
-		$('#medidas-visibles').text($('.medidas-programa:visible').length);
+		medidas_visibles();
+		//$('#medidas-visibles').text($('.medidas-programa:visible').length);
 	});
 
 	$('.medidas-programa .titulo-medida h4').on('click', function(e) {
