--- a/web/programa_gl.html
+++ b/web/programa_gl.html
@@ -13105,7 +13105,14 @@ Obxectivo residuo CERO</h4>
 	 
 	})();
 
-	$('#medidas-visibles').text($('.medidas-programa:visible').length);
+	function medidas_visibles() {
+		setTimeout(function() {
+			$('#medidas-visibles').text($('.medidas-programa:visible').length);
+		}, 500);
+	}
+
+	//$('#medidas-visibles').text($('.medidas-programa:visible').length);
+	medidas_visibles();
 
 	$('#busca').on('keyup', function(e) {
 		var objetivo = normaliza($(this).val());
@@ -13121,7 +13128,8 @@ Obxectivo residuo CERO</h4>
 				}
 			});
 		}
-		$('#medidas-visibles').text($('.medidas-programa:visible').length);
+		medidas_visibles();
+		//$('#medidas-visibles').text($('.medidas-programa:visible').length);
 	});
 
 	$('.medidas-programa .titulo-medida h4').on('click', function(e) {
