--- a/web/programa_es.html
+++ b/web/programa_es.html
@@ -11625,7 +11625,14 @@ puedan decidir el tipo de relación territorial que
 	 
 	})();
 
-	$('#medidas-visibles').text($('.medidas-programa:visible').length);
+	function medidas_visibles() {
+		setTimeout(function() {
+			$('#medidas-visibles').text($('.medidas-programa:visible').length);
+		}, 500);
+	}
+
+	//$('#medidas-visibles').text($('.medidas-programa:visible').length);
+	medidas_visibles();
 
 	$('#busca').on('keyup', function(e) {
 		var objetivo = normaliza($(this).val());
@@ -11641,7 +11648,8 @@ puedan decidir el tipo de relación territorial que
 				}
 			});
 		}
-		$('#medidas-visibles').text($('.medidas-programa:visible').length);
+		medidas_visibles();
+		//$('#medidas-visibles').text($('.medidas-programa:visible').length);
 	});
 
 	$('.medidas-programa .titulo-medida h4').on('click', function(e) {
