Mejorado buscador de programa

--- a/web/programa_ast.html
+++ b/web/programa_ast.html
@@ -13017,6 +13017,7 @@ socuenques de los ríos Genil, Fardes y Guadiana Menor.</li>
 	})();
 
 	function medidas_visibles() {
+		$('#medidas-visibles').html('<i class="fa fa-spinner fa-spin"></i>');
 		setTimeout(function() {
 			$('#medidas-visibles').text($('.medidas-programa:visible').length);
 		}, 500);
