--- a/web/programa_es.html
+++ b/web/programa_es.html
@@ -11626,6 +11626,7 @@ puedan decidir el tipo de relación territorial que
 	})();
 
 	function medidas_visibles() {
+		$('#medidas-visibles').html('<i class="fa fa-spinner fa-spin"></i>');
 		setTimeout(function() {
 			$('#medidas-visibles').text($('.medidas-programa:visible').length);
 		}, 500);
