--- a/web/programa_ca.html
+++ b/web/programa_ca.html
@@ -13093,6 +13093,7 @@ L’autorització per poder desenvolupar la solució acordada.</li>
 	})();
 
 	function medidas_visibles() {
+		$('#medidas-visibles').html('<i class="fa fa-spinner fa-spin"></i>');
 		setTimeout(function() {
 			$('#medidas-visibles').text($('.medidas-programa:visible').length);
 		}, 500);
