--- a/web/programa_en.html
+++ b/web/programa_en.html
@@ -13057,6 +13057,7 @@ Guarantee immediate health coverage to Spanish emigrants returned to the country
 	})();
 
 	function medidas_visibles() {
+		$('#medidas-visibles').html('<i class="fa fa-spinner fa-spin"></i>');
 		setTimeout(function() {
 			$('#medidas-visibles').text($('.medidas-programa:visible').length);
 		}, 500);
