--- a/web/programa_gl.html
+++ b/web/programa_gl.html
@@ -13106,6 +13106,7 @@ Obxectivo residuo CERO</h4>
 	})();
 
 	function medidas_visibles() {
+		$('#medidas-visibles').html('<i class="fa fa-spinner fa-spin"></i>');
 		setTimeout(function() {
 			$('#medidas-visibles').text($('.medidas-programa:visible').length);
 		}, 500);
