Mejorado buscador de programa

--- a/web/programa_ast.html
+++ b/web/programa_ast.html
@@ -13033,8 +13033,8 @@ socuenques de los ríos Genil, Fardes y Guadiana Menor.</li>
 		}
 		if (objetivo.length >= 4) {
 			$('.medidas-programa').hide();
-			$('.titulo-medida h4').each(function() {
-				var titulo = normaliza($(this).text());
+			$('.titulo-medida').each(function() {
+				var titulo = normaliza($(this).find('h4').text()+' '+$(this).find('.categoria-medida').text());
 				if (titulo.indexOf(objetivo) >= 0) {
 					$(this).parents('.medidas-programa').fadeIn();
 				}
