--- a/web/programa_ca.html
+++ b/web/programa_ca.html
@@ -13109,8 +13109,8 @@ L’autorització per poder desenvolupar la solució acordada.</li>
 		}
 		if (objetivo.length >= 4) {
 			$('.medidas-programa').hide();
-			$('.titulo-medida h4').each(function() {
-				var titulo = normaliza($(this).text());
+			$('.titulo-medida').each(function() {
+				var titulo = normaliza($(this).find('h4').text()+' '+$(this).find('.categoria-medida').text());
 				if (titulo.indexOf(objetivo) >= 0) {
 					$(this).parents('.medidas-programa').fadeIn();
 				}
