--- a/web/programa_en.html
+++ b/web/programa_en.html
@@ -13073,8 +13073,8 @@ Guarantee immediate health coverage to Spanish emigrants returned to the country
 		}
 		if (objetivo.length >= 4) {
 			$('.medidas-programa').hide();
-			$('.titulo-medida h4').each(function() {
-				var titulo = normaliza($(this).text());
+			$('.titulo-medida').each(function() {
+				var titulo = normaliza($(this).find('h4').text()+' '+$(this).find('.categoria-medida').text());
 				if (titulo.indexOf(objetivo) >= 0) {
 					$(this).parents('.medidas-programa').fadeIn();
 				}
