--- a/web/programa_es.html
+++ b/web/programa_es.html
@@ -11642,8 +11642,8 @@ puedan decidir el tipo de relación territorial que
 		}
 		if (objetivo.length >= 4) {
 			$('.medidas-programa').hide();
-			$('.titulo-medida h4').each(function() {
-				var titulo = normaliza($(this).text());
+			$('.titulo-medida').each(function() {
+				var titulo = normaliza($(this).find('h4').text()+' '+$(this).find('.categoria-medida').text());
 				if (titulo.indexOf(objetivo) >= 0) {
 					$(this).parents('.medidas-programa').fadeIn();
 				}
