--- a/web/programa_ast.html
+++ b/web/programa_ast.html
@@ -13020,7 +13020,7 @@ socuenques de los ríos Genil, Fardes y Guadiana Menor.</li>
 		$('#medidas-visibles').html('<i class="fa fa-spinner fa-spin"></i>');
 		setTimeout(function() {
 			$('#medidas-visibles').text($('.medidas-programa:visible').length);
-		}, 500);
+		}, 800);
 	}
 
 	//$('#medidas-visibles').text($('.medidas-programa:visible').length);
@@ -13028,7 +13028,7 @@ socuenques de los ríos Genil, Fardes y Guadiana Menor.</li>
 
 	$('#busca').on('keyup', function(e) {
 		var objetivo = normaliza($(this).val());
-		if (objetivo.length == 0) {
+		if (objetivo == '') {
 			$('medidas-programa').fadeIn();
 		}
 		if (objetivo.length >= 4) {
