Mejorado buscador de programa

--- a/web/programa_ast.html
+++ b/web/programa_ast.html
@@ -13027,7 +13027,8 @@ socuenques de los ríos Genil, Fardes y Guadiana Menor.</li>
 	medidas_visibles();
 
 	$('#busca').on('keyup', function(e) {
-		var objetivo = normaliza($(this).val());
+		//var objetivo = normaliza($(this).val());
+		var objetivo = $(this).val();
 		if (objetivo == '') {
 			$('medidas-programa').fadeIn();
 		}
@@ -13035,7 +13036,7 @@ socuenques de los ríos Genil, Fardes y Guadiana Menor.</li>
 			$('.medidas-programa').hide();
 			$('.titulo-medida').each(function() {
 				var titulo = normaliza($(this).find('h4').text()+' '+$(this).find('.categoria-medida').text());
-				if (titulo.indexOf(objetivo) >= 0) {
+				if (titulo.indexOf(normaliza(objetivo)) >= 0) {
 					$(this).parents('.medidas-programa').fadeIn();
 				}
 			});
