--- a/web/programa_ca.html
+++ b/web/programa_ca.html
@@ -13103,7 +13103,8 @@ L’autorització per poder desenvolupar la solució acordada.</li>
 	medidas_visibles();
 
 	$('#busca').on('keyup', function(e) {
-		var objetivo = normaliza($(this).val());
+		//var objetivo = normaliza($(this).val());
+		var objetivo = $(this).val();
 		if (objetivo == '') {
 			$('medidas-programa').fadeIn();
 		}
@@ -13111,7 +13112,7 @@ L’autorització per poder desenvolupar la solució acordada.</li>
 			$('.medidas-programa').hide();
 			$('.titulo-medida').each(function() {
 				var titulo = normaliza($(this).find('h4').text()+' '+$(this).find('.categoria-medida').text());
-				if (titulo.indexOf(objetivo) >= 0) {
+				if (titulo.indexOf(normaliza(objetivo)) >= 0) {
 					$(this).parents('.medidas-programa').fadeIn();
 				}
 			});
