--- a/web/programa_es.html
+++ b/web/programa_es.html
@@ -11636,7 +11636,8 @@ puedan decidir el tipo de relación territorial que
 	medidas_visibles();
 
 	$('#busca').on('keyup', function(e) {
-		var objetivo = normaliza($(this).val());
+		//var objetivo = normaliza($(this).val());
+		var objetivo = $(this).val();
 		if (objetivo == '') {
 			$('medidas-programa').fadeIn();
 		}
@@ -11644,7 +11645,7 @@ puedan decidir el tipo de relación territorial que
 			$('.medidas-programa').hide();
 			$('.titulo-medida').each(function() {
 				var titulo = normaliza($(this).find('h4').text()+' '+$(this).find('.categoria-medida').text());
-				if (titulo.indexOf(objetivo) >= 0) {
+				if (titulo.indexOf(normaliza(objetivo)) >= 0) {
 					$(this).parents('.medidas-programa').fadeIn();
 				}
 			});
