--- a/web/programa_eu.html
+++ b/web/programa_eu.html
@@ -13494,7 +13494,8 @@ Ezinbestekoa da, halaber, erkidegoen osasun gaietako eskumenak koordinatzea, eta
 	medidas_visibles();
 
 	$('#busca').on('keyup', function(e) {
-		var objetivo = normaliza($(this).val());
+		//var objetivo = normaliza($(this).val());
+		var objetivo = $(this).val();
 		if (objetivo == '') {
 			$('medidas-programa').fadeIn();
 		}
@@ -13502,7 +13503,7 @@ Ezinbestekoa da, halaber, erkidegoen osasun gaietako eskumenak koordinatzea, eta
 			$('.medidas-programa').hide();
 			$('.titulo-medida').each(function() {
 				var titulo = normaliza($(this).find('h4').text()+' '+$(this).find('.categoria-medida').text());
-				if (titulo.indexOf(objetivo) >= 0) {
+				if (titulo.indexOf(normaliza(objetivo)) >= 0) {
 					$(this).parents('.medidas-programa').fadeIn();
 				}
 			});
