--- a/web/programa_en.html
+++ b/web/programa_en.html
@@ -13067,16 +13067,15 @@ Guarantee immediate health coverage to Spanish emigrants returned to the country
 	medidas_visibles();
 
 	$('#busca').on('keyup', function(e) {
-		//var objetivo = normaliza($(this).val());
-		var objetivo = $(this).val();
-		if (objetivo == '') {
-			$('medidas-programa').fadeIn();
+		var objetivo = normaliza($(this).val());
+		if (objetivo.length == 0) {
+			$('.medidas-programa').fadeIn();
 		}
 		if (objetivo.length >= 4) {
 			$('.medidas-programa').hide();
 			$('.titulo-medida').each(function() {
 				var titulo = normaliza($(this).find('h4').text()+' '+$(this).find('.categoria-medida').text());
-				if (titulo.indexOf(normaliza(objetivo)) >= 0) {
+				if (titulo.indexOf(objetivo) >= 0) {
 					$(this).parents('.medidas-programa').fadeIn();
 				}
 			});
