Mejorado buscador de programa

--- a/web/programa_ast.html
+++ b/web/programa_ast.html
@@ -30,7 +30,8 @@
         </div>
     </div>
 
-	<div class="medidas">   
+	<div class="medidas">
+		<div style="width:100%;height:1px;"></div>  
 	
 		<div id="medida-1" class="medidas-programa" data-eje="Democracia Económica">
 		    <div class="numero-medida">1</div>
