Corregido error sintaxis

--- a/web/programa_ast.html
+++ b/web/programa_ast.html
@@ -12991,8 +12991,8 @@ socuenques de los ríos Genil, Fardes y Guadiana Menor.</li>
 
 ;(function($) {
 
-	//var url_base = 'http://unpaiscontigo.es/programa/';
-	var url_base = document.location.href.split('?')[0];
+	var url_base = 'http://unpaiscontigo.es/programa/';
+	//var url_base = document.location.href.split('?')[0];
 
 	var normaliza = (function() {
 	  var from = "ãàáäâèéëêìíïîòóöôùúüû", 
