--- a/web/programa_ca.html
+++ b/web/programa_ca.html
@@ -13067,8 +13067,8 @@ L’autorització per poder desenvolupar la solució acordada.</li>
 
 ;(function($) {
 
-	//var url_base = 'http://unpaiscontigo.es/programa/';
-	var url_base = document.location.href.split('?')[0];
+	var url_base = 'http://unpaiscontigo.es/programa/';
+	//var url_base = document.location.href.split('?')[0];
 
 	var normaliza = (function() {
 	  var from = "ãàáäâèéëêìíïîòóöôùúüû", 
