--- a/web/programa_en.html
+++ b/web/programa_en.html
@@ -13031,8 +13031,8 @@ Guarantee immediate health coverage to Spanish emigrants returned to the country
 
 ;(function($) {
 
-	//var url_base = 'http://unpaiscontigo.es/programa/';
-	var url_base = document.location.href.split('?')[0];
+	var url_base = 'http://unpaiscontigo.es/programa/';
+	//var url_base = document.location.href.split('?')[0];
 
 	var normaliza = (function() {
 	  var from = "ãàáäâèéëêìíïîòóöôùúüû", 
