--- a/web/programa_es.html
+++ b/web/programa_es.html
@@ -11600,8 +11600,8 @@ puedan decidir el tipo de relación territorial que
 
 ;(function($) {
 
-	//var url_base = 'http://unpaiscontigo.es/programa/';
-	var url_base = document.location.href.split('?')[0];
+	var url_base = 'http://unpaiscontigo.es/programa/';
+	//var url_base = document.location.href.split('?')[0];
 
 	var normaliza = (function() {
 	  var from = "ãàáäâèéëêìíïîòóöôùúüû", 
