--- a/web/programa_gl.html
+++ b/web/programa_gl.html
@@ -13080,8 +13080,8 @@ Obxectivo residuo CERO</h4>
 
 ;(function($) {
 
-	//var url_base = 'http://unpaiscontigo.es/programa/';
-	var url_base = document.location.href.split('?')[0];
+	var url_base = 'http://unpaiscontigo.es/programa/';
+	//var url_base = document.location.href.split('?')[0];
 
 	var normaliza = (function() {
 	  var from = "ãàáäâèéëêìíïîòóöôùúüû", 
