--- a/web/programa_eu.html
+++ b/web/programa_eu.html
@@ -13458,8 +13458,8 @@ Ezinbestekoa da, halaber, erkidegoen osasun gaietako eskumenak koordinatzea, eta
 
 ;(function($) {
 
-	//var url_base = 'http://unpaiscontigo.es/programa/';
-	var url_base = document.location.href.split('?')[0];
+	var url_base = 'http://unpaiscontigo.es/programa/';
+	//var url_base = document.location.href.split('?')[0];
 
 	var normaliza = (function() {
 	  var from = "ãàáäâèéëêìíïîòóöôùúüû", 
