--- a/web/programa_ca.html
+++ b/web/programa_ca.html
@@ -20,9 +20,9 @@
     </div>
 
 	<div class="busquedas">
-		<h3><i class="fa fa-search"></i> Búsquedas</h3>
+		<i class="fa fa-search"></i>
 		<input id="busca" type="search" placeholder="Buscar en el programa">
-		<p><span id="medidas-visibles"></span> medidas encontradas</p>
+		<span> <span id="medidas-visibles"></span> medidas encontradas</span>
 	</div>
 
 	<div class="medidas">
