--- a/web/programa_ca.html
+++ b/web/programa_ca.html
@@ -20,9 +20,13 @@
     </div>
 
 	<div class="busquedas">
-		<i class="fa fa-search"></i>
-		<input id="busca" type="search" placeholder="Buscar en el programa">
-		<span> <span id="medidas-visibles"></span> medidas encontradas</span>
+		<div class="buscar-programa">
+			<i class="fa fa-search"></i>
+			<input id="busca" type="search" placeholder="Buscar en el programa">
+		</div>
+		<div class="loader-medidas">
+			<span><span id="medidas-visibles"></span> medidas encontradas</span>
+		</div>
 	</div>
 
 	<div class="medidas">
