--- a/web/programa_en.html
+++ b/web/programa_en.html
@@ -13454,9 +13454,11 @@ Guarantee immediate health coverage to Spanish emigrants returned to the country
 	}
 
 	//$('#medidas-visibles').text($('.medidas-programa:visible').length);
+	$('.loader-medidas').hide();
 	medidas_visibles();
 
 	$('#busca').on('keyup', function(e) {
+		$('.loader-medidas').show();
 		var objetivo = normaliza($(this).val());
 		if (objetivo.length == 0) {
 			$('.medidas-programa').fadeIn();
