--- a/web/programa_gl.html
+++ b/web/programa_gl.html
@@ -13503,9 +13503,11 @@ Obxectivo residuo CERO</h4>
 	}
 
 	//$('#medidas-visibles').text($('.medidas-programa:visible').length);
+	$('.loader-medidas').hide();
 	medidas_visibles();
 
 	$('#busca').on('keyup', function(e) {
+		$('.loader-medidas').show();
 		var objetivo = normaliza($(this).val());
 		if (objetivo.length == 0) {
 			$('.medidas-programa').fadeIn();
