--- a/web/rescate.html
+++ b/web/rescate.html
@@ -1816,9 +1816,11 @@ Contratación.</li>
 		}, 800);
 	}
 
+	$('.loader-medidas').hide();
 	medidas_visibles();
 
 	$('#busca').on('keyup', function(e) {
+		$('.loader-medidas').show();
 		var objetivo = normaliza($(this).val());
 		if (objetivo.length == 0) {
 			$('.medidas-programa').fadeIn();
